# egui_wgpu_3d

./: Cargo.toml
src/: camera.rs  lib.rs  render_object.rs
src/camera/: orbit_camera.rs
src/render_object/: buffers.rs  polyline_object.rs
src/render_object/buffers/: line_segment_buffer.rs  vertex_buffer.rs
src/render_object/shaders/: wgpu_3d_polyline_shader.wgsl
