[package]
name = "egui_wgpu_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bytemuck"]

[dependencies]
eframe = {version = "0.21.0", default-features = false, features = ["accesskit", "default_fonts", "wgpu"]}
tracing-subscriber = "0.3"
bytemuck = { version = "1.7.1", optional = true }
nalgebra = {version="0.32", features=["convert-bytemuck"]}
uuid = {version="1.3.2", features=["v4", "fast-rng", "macro-diagnostics"]}